# advent-of-code

./: .gitignore  .sdkmanrc  README.md  go.mod
2020/day01-report-repair/: main.go
2020/day02-password-philosophy/: main.go
2021/day01-sonar-sweep/: main.go
2021/day02-dive/: main.go
2021/day03-binary-diagonostic/: main.go
2021/day04-giant-squid/: main.go
2021/day05-hydrothermal-venture/: main.go
2022/day01/: main.go
2022/day02/: main.go
2022/day02-rock-paper-scissors/: README.md  main.go
2022/day03/: main.go
2022/day03-rucksack-reorganization/: main.go
2022/day04/: main.go
2022/day04-camp-cleanup/: README.md  main.go
2022/day05/: main.go
2022/day05-supply-stacks/: README.md  main.go
2022/day06/: main.go
2022/day06-tuning-table/: README.md  main.go
2022/day08/: main.go
2022/day08-treetop-house/: main.go
2022/day09/: main.go
2022/day09-rope-bridge/: main.go
2022/day11/: main.go
2022/day11-monkey-in-the-middle/: main.go
2022/utils/: utils.go
2023/: .gitignore  README.md
2023/aoc/: pom.xml
2023/aoc/src/main/java/com/github/papayankey/: AoC.java  App.java  InputSource.java
2023/src/main/java/com/github/papayankey/: AoC.java
2024/: .gitignore  aoc2024.opam  dune-project
2024/lib/: dune  util.ml  util.mli
day01-calorie-counting/: README.md  main.go
day03-rucksack-reorganization/: README.md  main.go
src/main/java/com/github/papayankey/: AoC.java
src/test/java/com/github/papayankey/: AppTest.java
utils/: utils.go
utils/ds/: queue.go  queue_test.go  set.go  set_test.go
(+19 files in other folders)
