(lang dune 3.16)

(name aoc2024)

(generate_opam_files true)

(source
 (github papayankey/advent-of-code))

(authors "Benneth Yankey")

(maintainers "Benneth Yankey")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "Advent of code")
 (description "Advent of Code is an Advent calendar of small programming puzzles for a variety of skill levels that can be solved in any programming language you liken")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
